--- a/.github/workflows/build_push_image.yaml
+++ b/.github/workflows/build_push_image.yaml
@@ -1,4 +1,5 @@
 name: Build and Push Docker Images
+
 on:
   workflow_call:
     inputs:
@@ -21,7 +22,7 @@ on:
         required: false
         default: ./Dockerfile
         type: string
-        description: --file argument to pass  for docker build
+        description: --file argument to pass for docker build
       artifact_name:
         required: false
         type: string
@@ -35,7 +36,7 @@ on:
         required: false
     outputs:
       ecrRegistry:
-        description: The ecr registry where the image is uploaded
+        description: The ECR registry where the image is uploaded
         value: ${{ jobs.build.outputs.ecrRegistry }}
       imageTag:
         description: The image tag
@@ -43,6 +44,7 @@ on:
       tag:
         description: The image tag
         value: ${{ jobs.build.outputs.outcome }}
+
 jobs:
   build:
     outputs:
@@ -62,6 +64,12 @@ jobs:
       with:
         name: ${{ inputs.artifact_name }}
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
@@ -73,17 +81,19 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
-      with:
-        mask-password: 'true'
 
     - name: Build and Tag
       id: set-tag
-      env:
-        ECR_REPOSITORY: ${{ inputs.repository }}
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: ${{ inputs.image_tag || inputs.environment && format('{0}-{1}',inputs.environment,github.sha) || github.sha }}
+      uses: docker/build-push-action@v2
+      with:
+        context: ${{ inputs.docker_path }}
+        file: ${{ inputs.docker_file_path }}
+        push: true
+        tags: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.repository }}:${{ inputs.image_tag || inputs.environment && format('{0}-{1}', inputs.environment, github.sha) || github.sha }}
+        build-args: ${{ secrets.BUILD_ARGS }}
+        load: true 
+
+    - name: Output image tag
       run: |
-        docker build ${{ secrets.BUILD_ARGS }} -f ${{inputs.docker_file_path}} -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ${{ inputs.docker_path }}
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "image-tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
-        echo "imageTag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+        echo "image-tag=${{ inputs.image_tag || inputs.environment && format('{0}-{1}', inputs.environment, github.sha) || github.sha }}" >> $GITHUB_OUTPUT
+        echo "imageTag=${{ inputs.image_tag || inputs.environment && format('{0}-{1}', inputs.environment, github.sha) || github.sha }}" >> $GITHUB_OUTPUT
