--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,4 +33,16 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-  
+  deploy:
+    needs: 
+      - build_push_ecr
+      - determine-environment
+    name: Deploying reverse ip to ${{ needs.determine-environment.outputs.environment }}
+    if: github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/uat'
+    uses: ./.github/workflows/deploy_argocd.yaml@main
+    with:
+      image-tag: ${{ needs.build_push_ecr.outputs.tag }}
+      ecr_repository: reverse_ip
+      file_path: ${{ needs.determine-environment.outputs.environment }}/demo-team/reverse-ip.yaml
+    secrets:
+      GITOPS_TOKEN: ${{ secrets.GITOPS_TOKEN }}
